--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"body-parser": "^1.20.1",
+		"cloudinary": "^1.32.0",
 		"concurrently": "^7.5.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
@@ -19,7 +20,8 @@
 		"gravatar": "^1.8.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.7.2",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
@@ -28,6 +30,7 @@
 		"@types/gravatar": "^1.8.3",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/morgan": "^1.9.3",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^18.11.9",
 		"bcryptjs": "^2.4.3",
 		"nodemon": "^2.0.20",
